layout issues

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -67,7 +67,7 @@ a:hover{
 .container__sidebar{
   display: flex;
   flex-direction: column;
-  flex:0.25;
+  /* flex:0.25; */
   padding: 20px 15px;
 }
 
@@ -193,8 +193,8 @@ text > h2{
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  right: 0;
-  flex: 1;
+ 
+  /* flex: 1; */
 }
 
 .footer{
